[package]
name = "lib-genetic-algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
maplit = "1"
rand_chacha = "0.3"
